--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,9 @@ dependencies:
   cupertino_icons: ^1.0.0
   english_words: ^3.1.5
   http: ^0.12.2
+  image_picker: ^0.6.7+12
+  video_player: ^1.0.0
+  shared_preferences: ^0.5.12+4
 
 dev_dependencies:
   flutter_test:
