isolate解决https请求UI卡住的问题

--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -47,5 +47,10 @@
 	<string>APP需要访问你的相册</string>
 	<key>NSMicrophoneUsageDescription</key>
 	<string>APP需要访问你的麦克风</string>
+	<key>NSAppTransportSecurity</key>
+	<dict>
+		<key>NSAllowsArbitraryLoads</key>
+		<true/>
+	</dict>
 </dict>
 </plist>
