--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   image_picker: ^0.6.7+12
   video_player: ^1.0.0
   shared_preferences: ^0.5.12+4
+  isolate: ^2.0.3
 
 dev_dependencies:
   flutter_test:
@@ -52,6 +53,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/lmAppUpdate_gongyouyun.json
+    - assets/lake.jpg
 
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
